# rust_web_server_demo

./: Cargo.toml  README.md
migrations/2019-11-13-094753_create_messages/: down.sql  up.sql
src/: main.rs
src/services/: micro_service.rs  mod.rs
src/services/data_source/: models.rs
