[package]
name = "rust_web_server_demo"
version = "0.1.0"
authors = ["GuangGuang <lihansey163@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
maud = { git = "https://github.com/lfairy/maud" }
dotenv = "0.9.0"
url = "2.1.0"
serde_json = "1.0.41"
serde_derive = "1.0.102"
diesel = {version = "1.0.0", features = ["postgres"]}
log = "0.4.1"